--- a/example/index.html
+++ b/example/index.html
@@ -2,12 +2,39 @@
 <html>
     <head>
         <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js"></script>
-        <script src="../dist/svgchessboard.js"></script>
+        <script src="./chessboard-svg.js"></script>
     </head>
     <body>
         <div id="svgContainer"></div>
         <script>
-            require(['index']);
+            require(['index'], (chessboardsvg) =>{
+                const example = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1";
+                const example2 = "rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq e3 0 1";
+
+                /**
+                 * Example consumer function.
+                 */
+                function drawChessboard() {
+                    const xmlns = "http://www.w3.org/2000/svg";
+                    var boxWidth = 500;
+                    var boxHeight = 500;
+                    var block = document.createElementNS(xmlns, "svg");
+                    block.setAttributeNS(null, "viewBox", "0 0 " + boxWidth + " " + boxHeight);
+                    block.setAttributeNS(null, "width", String(boxWidth));
+                    block.setAttributeNS(null, "height", String(boxHeight));
+
+                    const svgChessboard = chessboardsvg.SVGChessboard.fromFEN(example);
+                    var board = svgChessboard.draw();
+                    block.appendChild(board);
+                    block.style.display = "block";
+                    const svgContainer = document.getElementById("svgContainer");
+                    if (svgContainer !== null) {
+                        svgContainer.appendChild(block);
+                    }
+                    return block;
+                }
+                drawChessboard()
+            });
         </script>
     </body>
 </html>
