--- a/example/index.html
+++ b/example/index.html
@@ -24,6 +24,8 @@
                     block.setAttributeNS(null, "height", String(boxHeight));
 
                     const svgChessboard = chessboardsvg.SVGChessboard.fromFEN(example);
+                    svgChessboard.highlight("b4");
+                    svgChessboard.highlight("c5", "red");
                     var board = svgChessboard.draw();
                     block.appendChild(board);
                     block.style.display = "block";
