feat: ⭐️ better square highlighting

--- a/example/index.html
+++ b/example/index.html
@@ -25,6 +25,7 @@
 
                     const svgChessboard = chessboardsvg.SVGChessboard.fromFEN(example);
                     svgChessboard.highlight("b4");
+                    svgChessboard.highlight("b5");
                     svgChessboard.highlight("c5", "red");
                     svgChessboard.addArrow("b4", "g5");
                     svgChessboard.addArrow("f2", "f4");
